# DashBoard

./: CMakeLists.txt  main.qrc
include/: dashboard.h  main_window.h  wave_config_dialog.h
include/backend/: ffmpegdecoder.h  mqttclient.h  ruddercontroller.h  testmqttclient.h  waveconfig.h
include/engine/: engine_bar_widget.h  port_engine_container.h  rudder_gauge_widget.h  stbd_engine_container.h
include/nav_info/: nav_info_widget.h  pitch_gauge_widget.h
include/propulsion/: propulsion_panel_widget.h  speed_log_widget.h  thruster_gauge_widget.h
include/video/: video_player_widget.h  video_player_window.h
include/wind_roll/: roll_gauge_widget.h  wind_gauge.h  wind_rose_widget.h
src/: dash_board.cpp  main.cpp  main_window.cpp  wave_config_dialog.cpp
src/backend/: ffmpegdecoder.cpp  mqttclient.cpp  ruddercontroller.cpp  testmqttclient.cpp
src/engine/: engine_bar_widget.cpp  port_engine_container.cpp  rudder_gauge_widget.cpp  stbd_engine_container.cpp
src/nav_info/: nav_info_widget.cpp  pitch_gauge_widget.cpp
src/propulsion/: propulsion_panel_widget.cpp  speed_log_widget.cpp  thruster_gauge_widget.cpp
src/video/: video_player_widget.cpp  video_player_window.cpp
src/wind_roll/: roll_gauge_widget.cpp  wind_gauge.cpp  wind_rose_widget.cpp
